Utlede aksjonspunkt tilkommet (#3589)
* Oppretter aksjonspunkt dersom tilkommet aktivitet

* Legger til tester og toggle

* Legger på javadoc og fikser etter QA

* Legger til kommentar og endrer på navn

* Endre beskrivelse av avklaringsbehov